# memtrace-ui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  prelude.rs  ui.rs
src/ui/: flamegraph.rs  helpers.rs  mod.rs  overview.rs  topdown.rs
src/ui/widgets/: flamegraph.rs
