[package]
name = "memgraph-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
egui_extras = { version = "0.31.1" }
eframe = "0.31.1"
clap = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["blocking"] }
bytesize = "2.0.1"
itertools = "0.14.0"
egui_ltreeview = "0.2.0"
egui_plot = "0.32.1"

[dependencies.common]
git = "https://github.com/blkmlk/memtrack-rs"