[package]
name = "memtrace-ui"
version = "0.3.0"
edition = "2024"
homepage = "https://github.com/blkmlk/memtrace-ui"
description = "A GUI tool for profiling heap memory consumption"
keywords = ["heap", "memory", "profile", "trace", "flamegraph"]
categories = ["os"]
repository = "https://github.com/blkmlk/memtrace-ui"
license = "MIT"

[dependencies]
egui = "0.31.1"
egui_extras = { version = "0.31.1" }
eframe = "0.31.1"
clap = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0.98"
bytesize = "2.0.1"
itertools = "0.14.0"
egui_ltreeview = "0.2.0"
memtrace-utils = "0.4.0"